tests/NormalTests/paczka1/fuzzy1/32173520.err
Error in line 8: S41 S163 284,9
Error in line 14: S41 A491 246,37
Error in line 20: Zq3vn24Hx A491 36,64
Error in line 17: oFz1sS S163 65,1
Error in line 1: hBdZIy S163 96,8
Error in line 22: oFz1sS A491 65,4
Error in line 21: Zq3vn24Hx A491 40,8
Error in line 24: oFz1sS S163 49,9
Error in line 9: S41 A491 57,1
Error in line 30: S41 A878 28,5
